// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node createPages pagination should create 1 page with 5 posts 1`] = `
[
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 0,
      },
      "path": "/page/1/",
    },
  ],
]
`;

exports[`gatsby-node createPages pagination should create 2 pages with 15 posts 1`] = `
[
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 0,
      },
      "path": "/page/1/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 10,
      },
      "path": "/page/2/",
    },
  ],
]
`;

exports[`gatsby-node createPages pagination should create 3 pages with 30 posts 1`] = `
[
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 0,
      },
      "path": "/page/1/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 10,
      },
      "path": "/page/2/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 20,
      },
      "path": "/page/3/",
    },
  ],
]
`;

exports[`gatsby-node createPages should create blog posts 1`] = `
[
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-04-18--welcoming/",
      },
      "path": "/posts/2017-04-18--welcoming/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-05-02--article-2/",
      },
      "path": "/posts/2017-05-02--article-2/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-05-02--article-1/",
      },
      "path": "/posts/2017-05-02--article-1/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 0,
      },
      "path": "/page/1/",
    },
  ],
]
`;

exports[`gatsby-node createPages should create tags pages 1`] = `
[
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-04-18--welcoming/",
      },
      "path": "/posts/2017-04-18--welcoming/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-05-02--article-2/",
      },
      "path": "/posts/2017-05-02--article-2/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-05-02--article-1/",
      },
      "path": "/posts/2017-05-02--article-1/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-post.tsx",
      "context": {
        "slug": "/posts/2017-05-02--article-0/",
      },
      "path": "/posts/2017-05-02--article-0/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/tags-page.tsx",
      "context": {
        "tag": "starter",
      },
      "path": "/tags/starter/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/tags-page.tsx",
      "context": {
        "tag": "gatsby",
      },
      "path": "/tags/gatsby/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/tags-page.tsx",
      "context": {
        "tag": "test",
      },
      "path": "/tags/test/",
    },
  ],
  [
    {
      "component": "base-path/src/templates/blog-page.tsx",
      "context": {
        "skip": 0,
      },
      "path": "/page/1/",
    },
  ],
]
`;

exports[`gatsby-node onCreateNode should create slugs for MarkdownRemark file 1`] = `
[
  [
    {
      "name": "slug",
      "node": {
        "internal": {
          "type": "MarkdownRemark",
        },
        "parent": "parent",
      },
      "value": "/posts/2017-04-18--welcoming/",
    },
  ],
]
`;
